Tech Path/style.css
body {
    margin: 0;
    padding: 0;
}

.main-body {
    margin: auto;
    padding-top: 20px;
    padding-bottom: 100px;
    text-align: center;
    align-items: center;
}

.main-body-col {
    align-items: center;
    padding: 50px;
}

.courses {
    font-family: 'Quicksand', sans-serif;
    padding-left: 50px;
    padding-right: 100px;
    text-align: left;
    width: 400px;
    height: 300px;
    color: #1A6692;
    box-shadow: black;
}

.image {
    width: 75%;
    height: 75%;
    align-self: center;
}

/* p {
    font-size: med;
} */

